css/styles.css
h1 {
	text-align: center;
}

h2 {
	font-size: 20px;
	text-align: center;
}

.class-header{
	width: 100%;
	padding: 10px 0;
	margin: 0 0 5px 0;
	background-color: #094b80;
	border-color: #094b80;
	border-radius: 5px 5px 0 0;

}

.class-header h3{
	text-align: center;
	color: white;
	font-size: 16px;
	padding: 0;
	margin: 0;
}


.btn {
	background-color: #094b80;
	border-radius: 5px;
	border-color: #094b80;
	color: white;
	border-width: 2px;
	border-style: solid;
	margin-top: 5px;
	width: 100%;
	height: 40px;
}

.btn:hover{
	border-color: #094b80;
	background-color: #FFFFFF;
	color: #094b80;
	cursor: pointer;
}

#selectBtn {
	font-size: 20px;
}

#toCustomization {
	font-size: 20px;
}

#toQuestionnaire {
	font-size: 16px;
}

.page-wrapper {
	display: flex;
	align-items: center;
	justify-content: center;
	position: relative;
}

.screen {
  height: 80px;
  width: 60px;
  padding: 1em;
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
  font-size: 2em;
  text-align: center;
  color: #ffffff;
  display: none;
}

.screen--selected {
  display: block;
}

.carousel-wrapper { 
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 10px;
	background: #6B9AC4;
	padding: 10px;
	border-radius: 5px;
	text-align: center;
}

.carousel {
  position: relative;
}

.carousel__arrow { 
    border: none;
	background: none;
	color: rgba(255, 255, 255, 0.5);
    cursor: pointer;
    font-size: 40px;
    transition: background 0.3s;
    z-index: 10;
}

.carousel__arrow:hover {
	color: rgba(255, 255, 255, 0.8);
}


.carousel__item {
  height: 80px;
  width: 60px;
  padding: 1em;
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
  font-size: 2em;
  text-align: center;
  color: #ffffff;
  display: none;
}

.carousel__item--selected {
  display: block;
}

.carousel__nav {
  width: 100%;
  padding: 20px 0;
  position: absolute;
  bottom: 0;
  left: 0;
  text-align: center;
}

.carousel__button {
  width: 10px;
  height: 10px;
  display: inline-block;
  background: rgba(255, 255, 255, 0.2);
  border-radius: 50%;
  margin: 0 5px;
  cursor: pointer;
}

.carousel__button--selected {
  background: rgba(255, 255, 255, 0.5);
}


.class__questions{
	margin: 2px;
	background: #ddd;
	border-radius: 10px 10px 5px 5px;
	border-color: #094b80;
	border-width: 2px;
	border-style: solid;
	padding: 0;
	display: none;
}

.class__questions--selected{
	display: block;
}

.class-prompt{
	font-size: 14px;
	font-weight: bold;
	padding: 0;
	margin: 0 2px; 
}

.class-prompt p{
	padding 0;
	margin: 0;
}

.questions-wrapper{
	margin: 0 3px;
}

.likert{
	display: flex;
	flex-direction: column;
	gap: 0;
	margin: 5px 1px;
}

.likertQuestion{
	padding: 0;
	margin: 0;
	font-weight: bold;
	font-size: 12px;
}

.likertLabels{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin: 0;
	padding: 0;
	font-weight: normal;
}

.likertLabels p{
	padding: 0;
	margin: 0;
}

.likertBtns{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin: 0;
}

.likertBtns input{
	border-radius: 50%;
	background: black;
	border-color: blue;
}

.questionnaire-nav {
	display: flex;
	flex-direction: row;
	margin: 4px;
	justify-content: space-between;
}

.questionnaire-nav-btn {
	background-color: #094b80;
	border-radius: 5px;
	border-color: #094b80;
	color: white;
	border-width: 2px;
	border-style: solid;
	margin-top: 5px;
	width: 80px;
	height: 30px;
	font-size: 14px;
}

.questionnaire-nav-btn:hover{
	border-color: #094b80;
	background-color: white;
	color: #094b80;
	cursor: pointer;
}

